separated responsive design for tablets and phones from the main css, because for some reason tablet media querry overrided the phone one. And fixed some other minor issues

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,6 @@ nav{
     justify-content: space-evenly;
     align-items: center;
     text-shadow: 1px 1px 2px black;
-    
 }
 #left-part-logo{
     width: 50%;
@@ -395,330 +394,5 @@ input, select, textarea {
 }
 
 
-
-
-/* FOR SMALLER DEVICES      */
-
-/* TABLETS */
-
-
-@media only screen and (min-width: 600px) and (max-width: 1024px){
-    #photo-on-the-left {
-        width: 50%;
-        height: 70%;
-        }
-        #text-on-the-right {
-            width: 40%;
-            height: 50%;
-            display: flex;
-            flex-wrap: wrap;
-            flex-direction: column;
-            justify-content: center;
-            margin: 0;
-        } 
-        #text1 {
-            width: 80%;
-            height: 30%;
-            text-shadow: 1px 1px 2px black;
-        }
-        #text-on-the-right h3{
-            width: 100%;
-        }
-        #text2 {
-            width: 100%;
-            height: 50%;
-            text-shadow: 1px 1px 2px black;
-        }
-        #left-part-logo{
-            font-size: 1.5rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        #projects{
-            width: 100vw;
-            height: 90vh;
-            display: grid;
-            grid-template-columns: 2fr 2fr 2fr 2fr 2fr;
-            grid-template-rows: 1fr 1fr 1fr;
-        }
-        #first-box{
-            grid-area: 1 / 1 / 2 / 3 ;
-        }
-        #second-box{
-            grid-area: 1 / 3 / 2 / 4;
-        }
-        #third-box{
-            grid-area: 1 / 4 / 2 / 6;
-        }
-        #fourth-box{
-            grid-area: 2 / 1 / 3 / 2;
-        }
-        #fifth-box{
-            grid-area: 3 / 1 / 4 / 2;
-        }
-        #sixth-box{
-            grid-area: 2 / 2 / 4 / 4;
-        }
-        #seventh-box{
-            grid-area: 2 / 4 / 3 / 5;
-        }
-        #eighth-box{
-            grid-area: 2 / 5 / 3 / 6;
-        }
-        #ninth-box{
-            grid-area: 3 / 4 / 4 / 6;
-        }
-        #right-part-social{
-            width: 50%;
-            height: 80%;
-        }
-        #feedback{
-            width: 80%;
-            height: 20%;
-            margin-bottom: 50px;
-            margin-top: 65px;
-        }
-        #feedback p{
-            font-size: 2.5rem;
-        }
-        #left-part-contact{
-            width: 40%
-        }
-        form{
-            width: 80%
-        }
-        form :nth-child(1){
-            width: 50%;
-        }
-        form :nth-child(2){
-            width: 50%
-        }
-        form :nth-child(3){
-            width: 60%;
-        }
-        #Send{
-            width: 40%
-        }
-        #contact-title{
-        display: flex;
-        justify-content: center;
-        }
-        #icons{
-            width: 70%;
-            height: 20%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center
-        }
-};
-
 /* PHONES */
 
-@media only screen and (min-width: 300px) and (max-width: 599px){
-    body{ 
-        width: 100vw;
-        height: 100vh
-    }
-header{
-    width: 100vw;
-    height: 10vh;
-    background-color: #051622;  
-    display: flex;
- } 
-#right-part-menu{
-    display: hidden;
-    width: 0;
-}
-#left-part-logo{
-    font-size: 0rem;
-}
-#landing-page{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    height: 100%;
-}
-#photo-on-the-left{
-    width: 100%;
-    height: 50%;
-}
-#photo-on-the-left img{
-    width: 60%;
-    height: 90%;
-}
-#text-on-the-right{
-    width: 80%;
-    height: 40%;
-    margin: 0;
-    display: flex;
-    justify-content: space-evenly;
-}
-#text1{
-    width: 100%;
-    height: 30%;
-    font-size: 1rem;
-    display: flex;
-    justify-content: center;
-}
-#text2{
-width: 100%;
-height: 50%;
-display: flex;
-justify-content: center;
-}
-#text-on-the-right h3{
-font-size: 3rem;
-}
-#text-on-the-right p{
-font-size: 2rem;
-width: 100%;
-}
-#projects{
-    width: 100%;
-    height: 90%;
-    display: grid;
-    grid-template-columns: 200px 200px 200px 200px 200px;
-    grid-template-rows: 1fr 1fr 1fr;
-    overflow-x: scroll;
-}
-#first-box{
-    grid-area: 1 / 1 / 2 / 3 ;
-}
-#second-box{
-    grid-area: 1 / 3 / 2 / 4;
-}
-#third-box{
-    grid-area: 1 / 4 / 2 / 6;
-}
-#fourth-box{
-    grid-area: 2 / 1 / 3 / 2;
-}
-#fifth-box{
-    grid-area: 3 / 1 / 4 / 2;
-}
-#sixth-box{
-    grid-area: 2 / 2 / 4 / 4;
-}
-#seventh-box{
-    grid-area: 2 / 4 / 3 / 5;
-}
-#eighth-box{
-    grid-area: 2 / 5 / 3 / 6;
-}
-#ninth-box{
-    grid-area: 3 / 4 / 4 / 6;
-}
-#contact{
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-#left-part-contact{
-    width: 40%;
-    height: 30%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;  
-}
-#right-part-social{
-    width: 100%;
-    height: 25%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-#feedback{
-    width: 100%;
-    height: 40%;
-    color: #F5CB86;
-    font-family: 'Cormorant Garamond';
-    font-size: 3rem;
-    display: flex;
-    justify-content: center;
-    margin: 0;
-}
-#feedback p{
-    font-size: 1.4rem;
-    width: 80%;
-    height: 100%;
-}
-#icons{
-    width: 100%;
-    height: 30%;
-    display: flex;
-    justify-content: space-evenly;
-}
-.fa-brands{
-    font-size: 3.2rem;
-}
-#left-part-contact{
-    width: 100%;
-    height: 60%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly; 
-    align-items: center;
-}
-#contact-title{
-    width: 80%;
-    height: 10%;
-    display: flex;
-    margin-left: 75px;
-    font-size: 2.5rem;
-    font-family: 'Cormorant Garamond';
-}
-#contact-title h2{
-    font-style: italic;
-    font-size: 4rem;
-    text-shadow: 1px 1px 2px black;
-}
-#contact-fields{
-    width: 100%;
-    height: 70%;
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
-    align-items: center;
-}
-form{
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    margin-left: 75px;
-}
-form :nth-child(1){
-    width: 50%;
-    font-size: large;
-}
-form :nth-child(2){
-    width: 50%;
-    font-size: large;
-}
-form :nth-child(3){
-    width: 60%;
-    font-size: large;
-    height: 30%;
-}
-form * {
-    border: none;
-    outline: none;
-    background: transparent;
-    border-bottom: 1px solid;
-    border-color: #F5CB86
-}
-#Send{
-width: 40%;
-height: 15%;
-}
-
-
-
-
-
-}
